--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -52,6 +52,7 @@ body{
 
             .ul__li{
                 margin-bottom: 32px;
+                font-family: 'Barlow Condensed', sans-serif;
 
                 a{
                     span{
