Technology desktop css añadido

--- a/css/style.css
+++ b/css/style.css
@@ -722,6 +722,9 @@ body {
   width: 100%;
   height: 100%;
 }
+.main__technology .technology__img .img-desktop {
+  display: none;
+}
 .main__technology .technology__options {
   margin-bottom: 26px;
 }
@@ -829,5 +832,76 @@ body {
     line-height: 28px;
     margin-top: 16px;
     margin-bottom: 97px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .technology {
+    background-image: url("/assets/technology/background-technology-desktop.jpg");
+  }
+  .main {
+    margin-top: 0;
+  }
+  .main__technology {
+    max-width: 100%;
+    margin-left: 166px;
+    display: grid;
+    grid-template-areas: "title title ." "options data image" "options data image";
+  }
+  .main__technology .technology__title {
+    grid-area: title;
+    text-align: left;
+    margin-left: 0;
+    font-size: 28px;
+    letter-spacing: 4.72px;
+    margin-bottom: 26px;
+    margin-top: 76px;
+  }
+  .main__technology .technology__title span {
+    margin-right: 24px;
+  }
+  .main__technology .technology__img {
+    grid-area: image;
+    margin-bottom: 101px;
+  }
+  .main__technology .technology__img .img-mobile {
+    display: none;
+  }
+  .main__technology .technology__img .img-desktop {
+    display: inline-block;
+  }
+  .main__technology .technology__options {
+    grid-area: options;
+    margin-bottom: 0;
+    margin-top: 111px;
+  }
+  .main__technology .technology__options ul {
+    flex-direction: column;
+    gap: 32px;
+  }
+  .main__technology .technology__options ul li {
+    letter-spacing: 2px;
+    width: 80px;
+    height: 80px;
+    font-size: 32px;
+  }
+  .main__technology .technology__data {
+    grid-area: data;
+    width: 470px;
+    margin-left: 80px;
+    margin-right: 130px;
+    margin-top: 111px;
+    text-align: left;
+  }
+  .main__technology .technology__data .technology__h2 {
+    margin-bottom: 11px;
+  }
+  .main__technology .technology__data .technology__h1 {
+    font-size: 56px;
+  }
+  .main__technology .technology__data .technology__p {
+    font-size: 18px;
+    line-height: 32px;
+    margin-top: 17px;
+    margin-bottom: 0;
   }
 }/*# sourceMappingURL=style.css.map */
