--- a/sass/pages/_destination.scss
+++ b/sass/pages/_destination.scss
@@ -188,9 +188,9 @@
         height: 100%;
     }
 
-    .main{
-        display: inherit;
-    }
+    // .main{
+    //     display: inherit;
+    // }
     
     .main__destination{
         max-width: 100%;
