--- a/sass/pages/_technology.scss
+++ b/sass/pages/_technology.scss
@@ -176,9 +176,9 @@
         // height: 100%;
     }
 
-    .main{
-        margin-top: 0;
-    }
+    // .main{
+    //     margin-top: 0;
+    // }
     
     .main__technology{
         max-width: 100%;
