Crew HTML y CSS responsive

--- a/css/style.css
+++ b/css/style.css
@@ -515,6 +515,9 @@ body {
   height: 100vh;
 }
 
+.main__crew {
+  text-align: center;
+}
 .main__crew .crew__title {
   color: hsl(0, 0%, 100%);
   text-transform: uppercase;
@@ -557,12 +560,13 @@ body {
   width: 10px;
   height: 10px;
   border-radius: 50px;
-  background-color: hsl(231, 76%, 90%);
-}
-.main__crew .crew__options ul li:active {
-  background-color: hsl(0, 0%, 100%);
+  background-color: #979797;
 }
 .main__crew .crew__options ul li:hover {
+  cursor: pointer;
+  background-color: hsl(231, 76%, 90%);
+}
+.main__crew .crew__options ul .active {
   background-color: hsl(0, 0%, 100%);
 }
 .main__crew .crew__h2 {
@@ -651,6 +655,7 @@ body {
     background-image: url("/assets/crew/background-crew-desktop.jpg");
   }
   .main__crew {
+    text-align: left;
     margin-top: 62px;
     max-width: 100%;
     margin-left: 166px;
