--- a/sass/pages/_crew.scss
+++ b/sass/pages/_crew.scss
@@ -7,6 +7,7 @@
 }
 
 .main__crew{
+    text-align: center;
 
     .crew__title{
         color: $white;
@@ -55,15 +56,16 @@
                 width: 10px;
                 height: 10px;
                 border-radius: 50px;
-                background-color: $sky;
-
-                &:active{
-                    background-color: $white;
-                }
+                background-color: #979797;
 
                 &:hover{
-                    background-color: $white;
+                    cursor: pointer;
+                    background-color: $sky;
                 }
+            }
+
+            .active{
+                background-color: $white;
             }
         }
     }
@@ -176,6 +178,7 @@
     }
     
     .main__crew{
+        text-align: left;
         margin-top: 62px;
         max-width: 100%;
         margin-left: 166px;
