--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -1,7 +1,3 @@
-// @import url('https://fonts.googleapis.com/css2?family=Bellefair&display=swap');
-// @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Bellefair&display=swap');
-// @import url('https://fonts.googleapis.com/css2?family=Barlow&display=swap');
-
 *{
     margin: 0;
     padding: 0;
@@ -18,28 +14,6 @@ p{
     font-family: 'Barlow', sans-serif;
 }
 
-// h1{
-//     font-size: $heading-1;
-// }
-
-// h2{
-//     font-size: $heading-2;
-// }
-
-// h3{
-//    font-size: $heading-3; 
-// }
-
-// h4{
-//     font-size: $heading-4;
-// }
-
 h5{
-    font-family: 'Barlow Condensed', sans-serif; // Nav TEXT - subheading 2
-    // font-size: $heading-5;
+    font-family: 'Barlow Condensed', sans-serif;
 }
-
-// .container{
-//     margin: 0 auto;
-//     width: 86%;
-// }
