--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -51,6 +51,8 @@ body{
             margin-top: 54px;
 
             .ul__li{
+                text-align: left;
+                width: 100%;
                 margin-bottom: 32px;
                 font-family: 'Barlow Condensed', sans-serif;
 
@@ -63,6 +65,10 @@ body{
                         margin-right: 12px;
                     }
                 }
+            }
+
+            .active{
+                border-right: 3px solid rgb(255, 255, 255);
             }
         }
     }
@@ -104,7 +110,6 @@ body{
     &__button{
         font-size: 20px;
         letter-spacing: 1.25px;
-        color: $body-bg;
         border-radius: 50%;
         width: 150px;
         height: 150px;
@@ -113,6 +118,10 @@ body{
         text-transform: uppercase;
         font-family: 'bellefair';
         margin-bottom: 48px;
+
+        a{
+            color: $body-bg;
+        }
     }
 }
 
@@ -159,6 +168,7 @@ body{
                 padding: 39px 46px 0 46px;
                 
                 .ul__li{
+                    width: auto;
                     border-bottom: 3px solid transparent;
                     padding-bottom: 39px;
                     margin-bottom: 0;
@@ -177,6 +187,7 @@ body{
 
                 .active{
                     border-bottom: 3px solid rgb(255, 255, 255);
+                    border-right: none;
                 }
             }
         }
@@ -299,7 +310,6 @@ body{
             &:hover{
                 cursor: pointer;
                 box-shadow: 0px 0px 0px 88px rgba(151, 151, 151, 10.36%);
-                // opacity: 10.36%;
             }
         }
     }
