--- a/sass/pages/_crew.scss
+++ b/sass/pages/_crew.scss
@@ -48,7 +48,6 @@
             flex-direction: row;
             justify-content: center;
             gap: 16px;
-            // text-transform: uppercase;
             font-size: 14px;
             letter-spacing: 2.36px;
 
@@ -73,7 +72,7 @@
     .crew__h2{
         font-family: 'Bellefair', serif;
         font-size: 16px;
-        color: $white; // mas oscuro
+        color: $white;
         text-transform: uppercase;
         font-weight: 400;
         opacity: 49%;
